[package]
name = "wrx"
version = "0.0.1"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
glob = "0.3.0"
shellexpand = "1.0.0"
dirs = "1.0.4"
